--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
-    "jquery": "^3.6.0"
+    "jquery": "^3.6.0",
+    "lightbox2": "^2.11.3"
   },
   "scripts": {
     "dev": "webpack serve",
